# cpatterns

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
iterators/: CMakeLists.txt  iter_recursion.c  iterators.c
